# atom-scanner

./: CMakeLists.txt  README.md
atom-scanner/: SignatureScanner.hpp
atom-scanner/src/: SignatureScanner.cpp
atom-scanner/src/linux/: Module.cpp  Module.hpp  SignatureScanner.cpp
atom-scanner/src/windows/: SignatureScanner.cpp
